nagp-k8s-assignment-k8s/employee-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-api
  namespace: nagp-assignment
spec:
  replicas: 1

  strategy:
    type: RollingUpdate

  selector:
    matchLabels:
      app: employee-api

  template:
    metadata:
      labels:
        app: employee-api

    spec:
      containers:
      - name: employee-api

        image: asia-south1-docker.pkg.dev/nagp-k8s-assignment-499505/nagp-repo/employee-api:v2

        ports:
        - containerPort: 8080

        resources:
          requests:
            cpu: "50m"
            memory: "256Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"
