nagp-k8s-assignment-k8s/employee-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-api-service
  namespace: nagp-assignment
spec:
  selector:
    app: employee-api

  ports:
  - port: 80
    targetPort: 8080

  type: LoadBalancer
