nagp-k8s-assignment-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employee-api-ingress
  namespace: nagp-assignment
spec:
  ingressClassName: nginx    # Add this line
  defaultBackend:
    service:
      name: employee-api-service
      port:
        number: 80
